<resources>
    <string name="app_name">Calculator</string>
    <string name="equation">ax^2+bx+c=0</string>
    <string name="senior_coefficient_text">a=</string>
    <string name="average_coefficient_text">b=</string>
    <string name="free_member_text">c=</string>
    <string name="decision_button_text">Решить уравнение</string>
    <string name="x1_text">x1=</string>
    <string name="x1">x1=%1$s</string>
    <string name="x2_text">x2=</string>
    <string name="x2">x2=%1$s</string>
    <string name="discriminant">D=%1$s</string>
    <string name="calculator">Calculator</string>
    <string name="dog_fragment">Dog Fragment</string>
    <string name="second_fragment_text">THIS IS SECOND FRAGMENT</string>
    <string name="label">Breeds</string>
    <string name="request">Запрос</string>
    <string name="breed_fragment">breed fragment</string>
</resources>